first round analysis on new 2013 data

--- a/webapp/application/templates/output.html
+++ b/webapp/application/templates/output.html
@@ -18,7 +18,7 @@
 
     <body>
         <div class='container'>
-            <h2>{{blurb}}.</h2>
+            <h2>{{blurb}}</h2>
             <h2 style='color: {{color}}'></h2>
             <a style='font-size: 15pt' href='http://localhost:5000/input'>Check out another Start-up</a>
         </div>
