--- a/webapp/application/templates/input.html
+++ b/webapp/application/templates/input.html
@@ -24,13 +24,50 @@
     <![endif]-->
   </head>
 
-  <body>
+<style>
+.bg_xc  {
+  background-image: url("https://questfusion.com/wp-content/uploads/2016/05/Angel-Investors-versus-Venture-CapitalistsSM-e1483830702716.jpg");
+  height: 100%;
+  /* Full height */ 
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+</style>
+
+ <body class="bg_xc">
+
+   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+     <div class="container">
+       <div class="navbar-header">
+         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+           <span class="sr-only">Toggle navigation</span>
+           <span class="icon-bar"></span>
+           <span class="icon-bar"></span>
+           <span class="icon-bar"></span>
+         </button>
+         <a class="navbar-brand" href="#">Project name</a>
+       </div>
+       <div class="collapse navbar-collapse">
+         <ul class="nav navbar-nav">
+           <li class="active"><a href="#">Home</a></li>
+           <li><a href="#about">About</a></li>
+           <li><a href="#contact">Contact</a></li>
+         </ul>
+       </div><!--/.nav-collapse -->
+     </div>
+   </div>
+
+<br><br>
 
     <div class="container">
 
        <div class="starter-template">
            <h2>StartUp or StartDown?</h2>
-           <h3>Fill out company information to predict outcome</h3>
+           <h3>Input company name to predict their future!</h3>
        </div>
 
          <form action="/output" method="GET">
@@ -38,17 +75,17 @@
              <label for="Company">Company:</label> 
              <input type="text"  name="Company">
            </div>
+
            <div>
              <button type="submit" class="btn btn-default btn-lg">Get Prediction!</button>
            </div>
          </form>
-
-     </div> <!-- /.container-->
+     </div> <!-- /.container--> 
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="../../static/js/bootstrap.min.js"></script>
   </body>
 </html>
